--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-sharp": "^2.12.1",
     "prismjs": "^1.25.0",
     "react": "^16.14.0",
+    "react-cookie-consent": "^6.4.1",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "typeface-alegreya": "^0.0.69",
