--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
         {
             "label": "bundle",
             "type": "shell",
-            "command": "bash  --login -c 'rvm use ruby-3.1.3 && bundle'",
+            "command": "bash  --login -c 'rvm install \"ruby-3.1.3\" && rvm use ruby-3.1.3 && bundle'",
             "problemMatcher": [],
             "group": "build"
         }
